Update c# version to 7.3

--- a/identification/BasicIdentification/BasicIdentification.csproj
+++ b/identification/BasicIdentification/BasicIdentification.csproj
@@ -5,6 +5,12 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <LangVersion>7.3</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <LangVersion>7.3</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ProjectOxford.Face" Version="1.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
