--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 api_access_key.txt
+
+.vscode/
+
+detection/BasicDetectionExample/bin/
+detection/BasicDetectionExample/obj/
+
+detection/WPFDetectionExample/DetectionExample/bin/
+detection/WPFDetectionExample/DetectionExample/obj/
+
+identification/.vscode/
+
+identification/CustomTraining/bin/
+identification/CustomTraining/obj/
+
+identification/SampleTraining/.vs/
+identification/SampleTraining/bin/
+identification/SampleTraining/obj/
+
+identification/Identification/.vs/
+identification/Identification/bin/
+identification/Identification/obj/
