--- a/.gitignore
+++ b/.gitignore
@@ -3,40 +3,47 @@ labelling/Test Script
 
 .vscode/
 
+detection/BasicDetectionExample/.vs/
 detection/BasicDetectionExample/bin/
 detection/BasicDetectionExample/obj/
+detection/BasicDetectionExample/BasicDetectionExample.sln
 
 detection/WPFDetectionExample/DetectionExample/bin/
 detection/WPFDetectionExample/DetectionExample/obj/
 
 identification/.vscode/
 
+identification/CustomTraining/.vs/
 identification/CustomTraining/bin/
 identification/CustomTraining/obj/
-
-identification/CustomTrainingArgs/.vs/
-identification/CustomTrainingArgs/bin/
-identification/CustomTrainingArgs/obj/
+identification/CustomTraining/CustomTraining.sln
 
 identification/SampleTraining/.vs/
 identification/SampleTraining/bin/
 identification/SampleTraining/obj/
+identification/SampleTraining/SampleTraining.sln
 
 identification/Identification/.vs/
 identification/Identification/bin/
 identification/Identification/obj/
+identification/Identification/Identification.sln
 
 TerminalUtils/.vs/
 TerminalUtils/bin/
 TerminalUtils/obj/
+TerminalUtils/TerminalUtils.sln
 
+labelling/FilteringExecutable/.vs/
 labelling/FilteringExecutable/bin/
 labelling/FilteringExecutable/obj/
+labelling/FilteringExecutable/FilteringExecutable.sln
 
 labelling/FilteringTerminalArgs/.vs/
 labelling/FilteringTerminalArgs/bin/
 labelling/FilteringTerminalArgs/obj/
+labelling/FilteringTerminalArgs/FilteringTerminalArgs.sln
 
 unity/UnityFaceIDHelper/.vs/
 unity/UnityFaceIDHelper/bin/
 unity/UnityFaceIDHelper/obj/
+unity/UnityFaceIDHelper/UnityFaceIDHelper.sln
