--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ detection/BasicDetectionExample/bin/
 detection/BasicDetectionExample/obj/
 detection/BasicDetectionExample/BasicDetectionExample.sln
 
+detection/WPFDetectionExample/.vs/
 detection/WPFDetectionExample/DetectionExample/bin/
 detection/WPFDetectionExample/DetectionExample/obj/
 
