--- a/unity/UnityFaceIDHelper/UnityFaceIDHelper.csproj
+++ b/unity/UnityFaceIDHelper/UnityFaceIDHelper.csproj
@@ -18,4 +18,7 @@
       <HintPath>UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="EmptyEnumeration.cs" />
+  </ItemGroup>
 </Project>
