--- a/unity/UnityFaceIDHelper/UnityFaceIDHelper.csproj
+++ b/unity/UnityFaceIDHelper/UnityFaceIDHelper.csproj
@@ -17,8 +17,12 @@
     <Reference Include="UnityEngine">
       <HintPath>UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="Messages">
+      <HintPath>Messages.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="EmptyEnumeration.cs" />
+    <Compile Remove="FaceMsgsEnums.cs" />
   </ItemGroup>
 </Project>
